update longinus and lucius

--- a/historical/life_of_longinus_and_lucius/styles/styles.css
+++ b/historical/life_of_longinus_and_lucius/styles/styles.css
@@ -1,4 +1,43 @@
-.italian {
+@media screen and (min-width: 630px) {
+	.languages > ul {
+		display: flex;
+	}
+}
+
+
+
+.coptic {
+	margin-top: 0;
+}
+
+.coptic,
+.english {
+	width: 100%;
+}
+
+main h3 {
+	text-indent: 2em;
+	background: darkolivegreen;
+	font-size: 2em;
+	top: 0;
+}
+
+main h3:hover {
+	padding-left: 0;
+}
+
+.coptic a:hover {
+	//text-decoration: underline;
+}
+
+body,
+#container {
+	max-width: 1000px;
+	max-width: none;
+}
+
+.italian,
+header {
 	display: none;
 }
 
@@ -135,41 +174,148 @@ main > ol > li > ol {
 #_09_07:has(#_09_07_01_co:focus) #_09_07_01_en,
 #_09_08:has(#_09_08_01_co:focus) #_09_08_01_en,
 
-
+/* ch. 10 */
 #_10_01:has(#_10_01_01_co:focus) #_10_01_01_en,
+#_10_02:has(#_10_02_01_co:focus) #_10_02_01_en,
+#_10_03:has(#_10_03_01_co:focus) #_10_03_01_en,
+#_10_04:has(#_10_04_01_co:focus) #_10_04_01_en,
+#_10_05:has(#_10_05_01_co:focus) #_10_05_01_en,
+#_10_06:has(#_10_06_01_co:focus) #_10_06_01_en,
+#_10_07:has(#_10_07_01_co:focus) #_10_07_01_en,
+#_10_08:has(#_10_08_01_co:focus) #_10_08_01_en,
+#_10_09:has(#_10_09_01_co:focus) #_10_09_01_en,
+
+/* ch. 11 */
 #_11_01:has(#_11_01_01_co:focus) #_11_01_01_en,
+#_11_02:has(#_11_02_01_co:focus) #_11_02_01_en,
+#_11_03:has(#_11_03_01_co:focus) #_11_03_01_en,
+#_11_04:has(#_11_04_01_co:focus) #_11_04_01_en,
+
+/* ch. 12 */
 #_12_01:has(#_12_01_01_co:focus) #_12_01_01_en,
+#_12_02:has(#_12_02_01_co:focus) #_12_02_01_en,
+#_12_03:has(#_12_03_01_co:focus) #_12_03_01_en,
+
+/* ch. 13 */
 #_13_01:has(#_13_01_01_co:focus) #_13_01_01_en,
+#_13_02:has(#_13_02_01_co:focus) #_13_02_01_en,
+#_13_03:has(#_13_03_01_co:focus) #_13_03_01_en,
+#_13_04:has(#_13_04_01_co:focus) #_13_04_01_en,
+#_13_05:has(#_13_05_01_co:focus) #_13_05_01_en,
+
+/* ch. 14 */
 #_14_01:has(#_14_01_01_co:focus) #_14_01_01_en,
+#_14_02:has(#_14_02_01_co:focus) #_14_02_01_en,
+#_14_03:has(#_14_03_01_co:focus) #_14_03_01_en,
+#_14_04:has(#_14_04_01_co:focus) #_14_04_01_en,
+#_14_05:has(#_14_05_01_co:focus) #_14_05_01_en,
+#_14_06:has(#_14_06_01_co:focus) #_14_06_01_en,
+#_14_07:has(#_14_07_01_co:focus) #_14_07_01_en,
+#_14_08:has(#_14_08_01_co:focus) #_14_08_01_en,
+#_14_09:has(#_14_09_01_co:focus) #_14_09_01_en,
+#_14_10:has(#_14_10_01_co:focus) #_14_10_01_en,
+#_14_11:has(#_14_11_01_co:focus) #_14_11_01_en,
+
+/* ch. 15 */
 #_15_01:has(#_15_01_01_co:focus) #_15_01_01_en,
+#_15_02:has(#_15_02_01_co:focus) #_15_02_01_en,
+#_15_03:has(#_15_03_01_co:focus) #_15_03_01_en,
+#_15_04:has(#_15_04_01_co:focus) #_15_04_01_en,
+#_15_05:has(#_15_05_01_co:focus) #_15_05_01_en,
+#_15_06:has(#_15_06_01_co:focus) #_15_06_01_en,
+#_15_07:has(#_15_07_01_co:focus) #_15_07_01_en,
+#_15_08:has(#_15_08_01_co:focus) #_15_08_01_en,
+#_15_09:has(#_15_09_01_co:focus) #_15_09_01_en,
+#_15_10:has(#_15_10_01_co:focus) #_15_10_01_en,
+#_15_11:has(#_15_11_01_co:focus) #_15_11_01_en,
+#_15_12:has(#_15_12_01_co:focus) #_15_12_01_en,
+#_15_13:has(#_15_13_01_co:focus) #_15_13_01_en,
+
+/* ch. 16 */
 #_16_01:has(#_16_01_01_co:focus) #_16_01_01_en,
+#_16_02:has(#_16_02_01_co:focus) #_16_02_01_en,
+#_16_03:has(#_16_03_01_co:focus) #_16_03_01_en,
+#_16_04:has(#_16_04_01_co:focus) #_16_04_01_en,
+#_16_05:has(#_16_05_01_co:focus) #_16_05_01_en,
+#_16_06:has(#_16_06_01_co:focus) #_16_06_01_en,
+
+/* ch. 17 */
 #_17_01:has(#_17_01_01_co:focus) #_17_01_01_en,
+#_17_02:has(#_17_01_02_co:focus) #_17_02_01_en,
+#_17_03:has(#_17_03_02_co:focus) #_17_03_01_en,
+#_17_04:has(#_17_04_02_co:focus) #_17_04_01_en,
+#_17_05:has(#_17_05_02_co:focus) #_17_05_01_en,
+#_17_06:has(#_17_06_02_co:focus) #_17_06_01_en,
+
 
 #_18_01:has(#_18_01_01_co:focus) #_18_01_01_en,
+
+
+
 #_18_09:has(#_18_09_01_co:focus) #_18_09_01_en,
+
+
 #_18_09:has(#_18_09_02_co:focus) #_18_09_02_en,
 
 
 #_19_01:has(#_19_01_01_co:focus) #_19_01_01_en,
+
+
 #_20_01:has(#_20_01_01_co:focus) #_20_01_01_en,
+
+
 #_21_01:has(#_21_01_01_co:focus) #_21_01_01_en,
+
+
 #_22_01:has(#_22_01_01_co:focus) #_22_01_01_en,
+
+
 #_23_01:has(#_23_01_01_co:focus) #_23_01_01_en,
+
+
 #_24_01:has(#_24_01_01_co:focus) #_24_01_01_en,
 #_25_01:has(#_25_01_01_co:focus) #_25_01_01_en,
+
+
 #_26_01:has(#_26_01_01_co:focus) #_26_01_01_en,
+
+
 #_27_01:has(#_27_01_01_co:focus) #_27_01_01_en,
+
+
 #_28_01:has(#_28_01_01_co:focus) #_28_01_01_en,
+
+
 #_29_01:has(#_29_01_01_co:focus) #_29_01_01_en,
+
+
 #_30_01:has(#_30_01_01_co:focus) #_30_01_01_en,
+
+
 #_31_01:has(#_31_01_01_co:focus) #_31_01_01_en,
+
+
 #_32_01:has(#_32_01_01_co:focus) #_32_01_01_en,
+
+/* ch. 33 */
 #_33_01:has(#_33_01_01_co:focus) #_33_01_01_en,
+
+/* ch. 34 */
 #_34_01:has(#_34_01_01_co:focus) #_34_01_01_en,
+
+/* ch. 35 */
 #_35_01:has(#_35_01_01_co:focus) #_35_01_01_en,
+
+/* ch. 36 */
 #_36_01:has(#_36_01_01_co:focus) #_36_01_01_en,
+
+/* ch. 37 */
 #_37_01:has(#_37_01_01_co:focus) #_37_01_01_en,
+
+/* ch. 38 */
 #_38_01:has(#_38_01_01_co:focus) #_38_01_01_en,
+
+/* ch. 39 */
 #_39_01:has(#_39_01_01_co:focus) #_39_01_01_en {
 	color: gold;
 }
